centered image on homepage and fixed flickering

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
 * {
   font-family: monospace;
   color:rgb(239, 239, 239);
-  backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
 }
